# Missile-system

./: LICENSE  README.md
dev/GUI/: mainwindow.h  mainwindow.ui  widget_modelset.cpp
dev/MessageManager/: CMakeLists.txt
dev/MessageManager/doc/: seq.wsd
dev/MessageManager/src/: any_channel.h  channel_carrier.h  msg_channel.h
dev/MessageManager/tests/: CMakeLists.txt
dev/ModelingDispatcher/: CMakeLists.txt
dev/ModelingDispatcher/src/: CMakeLists.txt  ModelingDispatcher.cpp  msg_types.h
dev/ModelingDispatcher/tests/: CMakeLists.txt
dev/Models/: CMakeLists.txt
dev/Models/pbu/: CMakeLists.txt
dev/Models/pbu/src/: CMakeLists.txt  pbu.cpp  pbu.h
dev/Models/pbu/tests/: CMakeLists.txt  main.cpp
dev/Models/pu/: CMakeLists.txt
dev/Models/pu/src/: CMakeLists.txt  pu.cpp  pu.h
dev/Models/pu/tests/: CMakeLists.txt  main.cpp
dev/Models/rls/src/: CMakeLists.txt  MFR_V2_Cycle_emxAPI.cpp  MFR_V2_Cycle_emxAPI.h  MFR_V2_Cycle_types.h  MFR_V2_GenerateMFRType.cpp  MFR_V2_GenerateTrajectoryType.cpp  MFR_V2_GenerateTrajectoryType.h  colon.cpp  colon.h  find.h  inv.cpp  linspace.h  main.h  nonzeros.cpp  normalize.cpp  rls.cpp  rls.h  rtGetNaN.h  rt_nonfinite.cpp
dev/Models/rls/tests/: main.cpp
dev/tests/: CMakeLists.txt  main.cpp  pu_init_PU_1.csv
src/: CMakeLists.txt  config.cmake  config_modeling.cpp  main.cpp  pbu.cpp  pbu.h  pu.h  rls.cpp  rls.h  target.h  trace.h  zur.h
src/GUI/: 05-13-14_config.json  05-13-17_config.json  05-15-01_config.json  05-21-01_config.json  05-26-13.json  gui2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modeling.cpp  modeling.h  modeling.ui  models_data.db  widget_modelset.cpp  widget_modelset.h  widget_modelset.ui
src/GUI/csenario/: widget_modelset.cpp  widget_modelset.h  widget_modelset.ui
src/GUI/csenario/objects_json/: aircraft.cpp  aircraft.h  combatcontrolpoint.cpp  combatcontrolpoint.h  launcher.cpp  launcher.h  radar.cpp  radar.h
src/GUI/modeling/: modeling.cpp  modeling.h  modeling.ui
src/GUI/modeling/objects_modeling/: abs_moving_model.cpp  abs_moving_model.cpp.autosave  abs_moving_model.h  abs_stationary_model.cpp  abs_stationary_model.h  aircraft_model.cpp  aircraft_model.h  aircraft_pbu.cpp  aircraft_pbu.h  aircraft_radar.cpp  aircraft_radar.h  launcher_model.cpp  launcher_model.h  pbu_model.cpp  pbu_model.h  radar_model.cpp  radar_model.h  zur_model.cpp  zur_model.h
src/MessageManager/: abstractmodel.h  any_channel.h  channel_crrier.h  main.cpp  msg_channel.h  msg_disp_test.pro  testmodel.cpp  testmodelb.h
src/MessageManager/doc/: seq.wsd  seq2.wsd
src/MessageManager/src/: CMakeLists.txt  msg_channel.h
src/MessageManager/tests/: main.cpp
src/MissileLauncher/: Missile_Launcher.cpp
src/ModelingDispatcher/src/: CMakeLists.txt  ModelingDispatcher.cpp  ModelingDispatcher.h  abstractmodel.h  modelfactory.h  msg_types.h
src/ModelingDispatcher/tests/: main.cpp  testmodel.cpp  testmodel.h
src/Models/: CMakeLists.txt
src/Models/pbu/: CMakeLists.txt
src/Models/pbu/src/: CMakeLists.txt  PBU.cpp  PBU.h
src/Models/pbu/tests/: CMakeLists.txt  main.cpp
src/Models/pu/: CMakeLists.txt  pu.cpp
src/Models/pu/src/: CMakeLists.txt  pu.cpp  pu.h
src/Models/pu/tests/: CMakeLists.txt  main.cpp
src/Models/pu_pbu_target_zur_test/: CMakeLists.txt  main.cpp  rlc_stub.cpp  rlc_stub.h
src/Models/pu_pbu_test/: CMakeLists.txt  main.cpp
src/Models/rls/: CMakeLists.txt
src/Models/rls/src/: MFR_V2_Cycle.cpp  MFR_V2_Cycle.h  MFR_V2_Cycle_data.cpp  MFR_V2_Cycle_data.h  MFR_V2_Cycle_emxutil.cpp  MFR_V2_Cycle_emxutil.h  MFR_V2_Cycle_initialize.cpp  MFR_V2_Cycle_initialize.h  MFR_V2_Cycle_terminate.cpp  MFR_V2_Cycle_terminate.h  MFR_V2_GenerateMFRType.h  MFR_V2_GenerateTrajectoryType.cpp  find.cpp  inv.h  ismember.cpp  ismember.h  issorted.cpp  issorted.h  linspace.cpp  main.cpp  mod.cpp  mod.h  nonzeros.h  normalize.h  rls.cpp  rls.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rt_nonfinite.h  rtwtypes.h  sort.cpp  sort.h  sortIdx.cpp  sortIdx.h
src/Models/rls/tests/: CMakeLists.txt  main.cpp
src/Models/zur/: CMakeLists.txt
src/Models/zur/src/: CMakeLists.txt  zur.cpp  zur.h
src/Models/zur/tests/: CMakeLists.txt  main.cpp
src/RadarStation/: DEV_Radar_output.m  MFR.mat  RadarParametresEvaluation.m
src/RadarStation/MFR_V2/: README.txt  РЛС переменные для инициализации.docx
src/RadarStation/MFR_V2/MFR_V2_Generated_CPP_Code/: MFR_V2_Cycle.cpp  MFR_V2_Cycle.h  MFR_V2_Cycle_data.cpp  MFR_V2_Cycle_data.h  MFR_V2_Cycle_emxAPI.cpp  MFR_V2_Cycle_emxAPI.h  MFR_V2_Cycle_emxutil.cpp  MFR_V2_Cycle_emxutil.h  MFR_V2_Cycle_initialize.cpp  MFR_V2_Cycle_initialize.h  MFR_V2_Cycle_terminate.cpp  MFR_V2_Cycle_terminate.h  MFR_V2_Cycle_types.h  MFR_V2_GenerateMFRType.cpp  MFR_V2_GenerateMFRType.h  MFR_V2_GenerateTrajectoryType.cpp  MFR_V2_GenerateTrajectoryType.h  colon.cpp  colon.h  find.cpp  find.h  inv.cpp  inv.h  ismember.cpp  ismember.h  issorted.cpp  issorted.h  linspace.cpp  linspace.h  mod.cpp  mod.h  nonzeros.cpp  nonzeros.h  normalize.cpp  normalize.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  (+6 more)
src/RadarStation/MFR_V2/MFR_V2_MatLab_Code/: MFR_V2_Cycle.m  MFR_V2_GenerateMFRType.m  MFR_V2_GenerateTrajectoryType.m  MFR_V2_GenerateTrajectoryType.prj  MFR_V2_Radar_output_codegen.m
src/RadarStation/Test_codegen/Correlation/: Correlation.cpp  Correlation_data.h  Correlation_initialize.cpp  Correlation_mex.lib  Correlation_mex.mexw64  Correlation_terminate.cpp  Correlation_terminate.h  SetEnv.bat  mtimes.cpp  rt_nonfinite.cpp  rt_nonfinite.h  xcorr.h
src/RadarStation/Test_codegen/Correlation/interface/: _coder_Correlation_api.cpp  _coder_Correlation_api.h  _coder_Correlation_info.h
src/TrajectoryModel/: Coordinates.h  TrajData.h  Vector3D.h  airtarget.cpp  airtarget.h  main.cpp
src/models/: CMakeLists.txt
src/tests/: CMakeLists.txt  main.cpp  test3.json
